syntax = "proto3";

package api.user.v1;

import "google/protobuf/empty.proto";

option go_package = "/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

service User {
  rpc ListUser (ListUserRequest) returns (ListUserReply);
  rpc GetUser (GetUserRequest) returns (GetUserReply);
  rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
  rpc UpdateUser (UpdateUserRequest) returns (google.protobuf.Empty);
}

message ListUserRequest {
  int32 page = 1;
  int32 pre_page = 2;
}
message ListUserReply {
  reserved 1;
  //  int32 page = 1;
  int32 total = 2;
  repeated GetUserReply data = 3;
}

message GetUserRequest {
  uint64 id = 1;
}
message GetUserReply {
  reserved 1;
  uint64 id = 6;
  //  string username = 1;
  string nickname = 2;
  string email = 3;
  string mobile = 4;
}

message CreateUserRequest {
  reserved 1;
  //  string username = 1;
  string nickname = 2;
  string email = 3;
  string mobile = 4;
  string password = 5;
}
message CreateUserReply {
  reserved 1;
  uint64 id = 6;
  //  string username = 1;
  string nickname = 2;
  string email = 3;
  string mobile = 4;
}

message UpdateUserRequest {
  reserved 1;
  uint64 id = 6;
  //  string username = 1;
  string nickname = 2;
  string email = 3;
  string mobile = 4;
}
